# parspy

./: pyproject.toml  setup.py
.github/workflows/: python-publish.yml
