[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "NAME"
version = "0.0.1"
authors = [
  { name="AUTHOR", email="EMAIL" },
]
description = "DESCRIPTION"
readme = "README"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "HOMEPAGE"
"Bug Tracker" = "BUG_TRACKER"