[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "parspy"
version = "0.0.1"
description = "A tool to parse text into a list where it can be interpreted and executed."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

